# agu

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  augment_videos.py  dataset.py  make_smoke_data.py  pyproject.toml  requirements-dev.txt  requirements-ocr.txt  requirements-service.txt  requirements-training.txt  train_mac.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml
app/: __init__.py  cli.py  config.py  main.py  plugins.py  provenance.py  version.py
app/analysis/: evaluation.py  event_owner.py  face_identity.py  identity_embedding.py  inference.py  motion.py  pipeline.py  router.py  schemas.py  scoreboard_ocr.py  service.py  task_manager.py  tracker_registry.py  tracking.py  vlm.py
app/models/: preprocessing.py  r2plus1d.py  r2plus1d_v2.py  registry.py
app/storage/: __init__.py  backends.py
docs/: README.md  api.md  checkpoints.md  cli-accuracy-roadmap.md  datasets.md  deploy-and-verify.md  extensions.md  model-card.md  open-source-scope-assessment.md  optimization-plan.md  release-notes.md  training-plan.md
docs/harness/: LLM-WIKI-HOOKS.md  LLM-WIKI-PENDING.md  LOCAL-SERVICE-CURL-HOOK.md  NINE-MOV-VALIDATION-20260713.md  TASK-BOARD.md  WORKFLOW.md
examples/: README.md  sample_output.json  sample_request.json
examples/benchmark/: README.md  analysis_prediction.json  golden_metrics.json  ground_truth.json  ground_truth_events.csv  identity_prediction.json
examples/plugins/: minimal_plugin.py
histories/: history_r2plus1d_v3.txt
profiles/: accurate.toml  fast.toml  vlm-full.toml
scripts/: __init__.py  build_identity_duplicate_report.py  build_player_markdown_reports.py  check_training.py  evaluate_public_benchmark.py  gen_augmented.py  gen_splits.py  generate_sbom.py  make_public_benchmark_fixture.py  manual_test_pretrained.py  manual_test_run.py  manual_test_steps.py  smoke_open_source.py  validate_open_source_baseline.py  verify_harness.py
tests/: test_cli.py  test_evaluation.py  test_face_identity.py  test_framework_foundation.py  test_hybrid_analysis.py  test_inference.py  test_open_source_extensions.py  test_player_markdown_reports.py  test_scoreboard_ocr.py  test_train_mac.py  test_train_mac_resilience.py
utils/: __init__.py
(+8 files in other folders)
